--- a/hangman/b2/assets/css/app.css
+++ b/hangman/b2/assets/css/app.css
@@ -9,6 +9,18 @@ body {
   font-family: 'Short Stack', cursive;
 }
 
+button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
 .game-holder {
   max-height: 70%;
